@@ -17,11 +17,11 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		Iterator<String> iterator = data.iterator();
 		
-		// Parsear los parámetros tipados.
+		// Parsear los parï¿½metros tipados.
 		
 		// empresaId
 		try {
-			result.add(new Long(iterator.next()));
+			result.add(Long.decode(iterator.next()));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -41,7 +41,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// vigente
 		try {
-			result.add(new Double(iterator.next()));
+			result.add(Double.parseDouble(iterator.next()));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -49,7 +49,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// vigenteNoAutoLiquidable
 		try {
-			result.add(new Double("0" + iterator.next().replace(",", ".")));
+			result.add(Double.parseDouble("0" + iterator.next().replace(",", ".")));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -57,7 +57,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// garantiasComputables
 		try {
-			result.add(new Double("0" + iterator.next().replace(",", ".")));
+			result.add(Double.parseDouble("0" + iterator.next().replace(",", ".")));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -65,7 +65,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// garantiasNoComputables
 		try {
-			result.add(new Double("0" + iterator.next().replace(",", ".")));
+			result.add(Double.parseDouble("0" + iterator.next().replace(",", ".")));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -89,7 +89,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// previsionesTotales
 		try {
-			result.add(new Double("0" + iterator.next().replace(",", ".")));
+			result.add(Double.parseDouble("0" + iterator.next().replace(",", ".")));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -97,7 +97,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// contingencias
 		try {
-			result.add(new Double("0" + iterator.next().replace(",", ".")));
+			result.add(Double.parseDouble("0" + iterator.next().replace(",", ".")));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -105,7 +105,7 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 		
 		// otorgantesGarantias
 		try {
-			result.add(new Double("0" + iterator.next().replace(",", ".")));
+			result.add(Double.parseDouble("0" + iterator.next().replace(",", ".")));
 		} catch (Exception e) {
 			e.printStackTrace();
 			result.add(null);
@@ -236,9 +236,9 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 			result.setNull(parameterIndex++, Types.DECIMAL);
 		}
 		
-		result.setLong(parameterIndex++, new Long(1));
+		result.setLong(parameterIndex++, Long.valueOf(1));
 		result.setTimestamp(parameterIndex++, new Timestamp(new Date().getTime()));
-		result.setLong(parameterIndex++, new Long(1));
+		result.setLong(parameterIndex++, Long.valueOf(1));
 		
 		return result;
 	}
@@ -342,9 +342,9 @@ public class BCUInterfaceRiesgoCrediticio extends DataProcessingTemplateMethod {
 			result.setNull(parameterIndex++, Types.DECIMAL);
 		}
 		
-		result.setLong(parameterIndex++, new Long(1));
+		result.setLong(parameterIndex++, Long.valueOf(1));
 		result.setTimestamp(parameterIndex++, new Timestamp(new Date().getTime()));
-		result.setLong(parameterIndex++, new Long(1));
+		result.setLong(parameterIndex++, Long.valueOf(1));
 		
 		if (documento != null) {
 			result.setString(parameterIndex++, documento);
